Semantico/y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 listaDeclaracoes FUNC listaFuncoes

   3  listaDeclaracoes : listaDeclaracoes declaracao
   4                   |

   5  listaFuncoes : listaFuncoes funcao
   6               |

   7  $$2 :

   8  declaracao : type $$2 TArray Lid ';'
   9             | declaracaoStruct

  10  declaracaoStruct : STRUCT IDENT '{' listaCampos '}' ';'

  11  listaCampos : listaCampos declaracao
  12              |

  13  funcao : funcaoComParam
  14         | funcaoSemParam
  15         | main

  16  funcaoComParam : typeRet IDENT '(' listaParam ')' listaDeclaracoes '{' listacmd '}'

  17  listaParam : param ';' listaParam
  18             | param

  19  param : type IDENT

  20  funcaoSemParam : typeRet IDENT '(' ')' listaDeclaracoes '{' listacmd '}'

  21  typeRet : type
  22          | VOID

  23  TArray : '[' NUM ']' TArray
  24         |

  25  Lid : Lid ',' id
  26      | id

  27  id : IDENT

  28  type : INT
  29       | DOUBLE
  30       | BOOL
  31       | IDENT

  32  main : VOID MAIN '(' ')' listaDeclaracoes bloco

  33  bloco : '{' listacmd '}'

  34  listacmd : listacmd cmd
  35           |

  36  cmd : IDENT '=' exp ';'

  37  $$3 :

  38  cmd : IF '(' exp ')' $$3 cmd
  39      | IDENT '(' ')' ';'
  40      | IDENT '(' listaExp ')' ';'

  41  exp : exp '+' exp
  42      | exp '*' exp
  43      | exp '>' exp
  44      | exp AND exp
  45      | NUM
  46      | '(' exp ')'
  47      | IDENT
  48      | IDENT '(' ')'
  49      | IDENT '(' listaExp ')'
  50      | exp '.' exp
  51      | exp '[' exp ']'

  52  listaExp : listaExp ',' exp
  53           | exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . listaDeclaracoes FUNC listaFuncoes  (2)
	listaDeclaracoes : .  (4)

	.  reduce 4

	listaDeclaracoes  goto 3


state 3
	prog : $$1 listaDeclaracoes . FUNC listaFuncoes  (2)
	listaDeclaracoes : listaDeclaracoes . declaracao  (3)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	STRUCT  shift 8
	FUNC  shift 9
	.  error

	type  goto 10
	declaracao  goto 11
	declaracaoStruct  goto 12


state 4
	type : IDENT .  (31)

	.  reduce 31


state 5
	type : INT .  (28)

	.  reduce 28


state 6
	type : DOUBLE .  (29)

	.  reduce 29


state 7
	type : BOOL .  (30)

	.  reduce 30


state 8
	declaracaoStruct : STRUCT . IDENT '{' listaCampos '}' ';'  (10)

	IDENT  shift 13
	.  error


state 9
	prog : $$1 listaDeclaracoes FUNC . listaFuncoes  (2)
	listaFuncoes : .  (6)

	.  reduce 6

	listaFuncoes  goto 14


state 10
	declaracao : type . $$2 TArray Lid ';'  (8)
	$$2 : .  (7)

	.  reduce 7

	$$2  goto 15


state 11
	listaDeclaracoes : listaDeclaracoes declaracao .  (3)

	.  reduce 3


state 12
	declaracao : declaracaoStruct .  (9)

	.  reduce 9


state 13
	declaracaoStruct : STRUCT IDENT . '{' listaCampos '}' ';'  (10)

	'{'  shift 16
	.  error


state 14
	prog : $$1 listaDeclaracoes FUNC listaFuncoes .  (2)
	listaFuncoes : listaFuncoes . funcao  (5)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	VOID  shift 17
	$end  reduce 2

	type  goto 18
	funcao  goto 19
	funcaoComParam  goto 20
	funcaoSemParam  goto 21
	main  goto 22
	typeRet  goto 23


state 15
	declaracao : type $$2 . TArray Lid ';'  (8)
	TArray : .  (24)

	'['  shift 24
	IDENT  reduce 24

	TArray  goto 25


state 16
	declaracaoStruct : STRUCT IDENT '{' . listaCampos '}' ';'  (10)
	listaCampos : .  (12)

	.  reduce 12

	listaCampos  goto 26


state 17
	typeRet : VOID .  (22)
	main : VOID . MAIN '(' ')' listaDeclaracoes bloco  (32)

	MAIN  shift 27
	IDENT  reduce 22


state 18
	typeRet : type .  (21)

	.  reduce 21


state 19
	listaFuncoes : listaFuncoes funcao .  (5)

	.  reduce 5


state 20
	funcao : funcaoComParam .  (13)

	.  reduce 13


state 21
	funcao : funcaoSemParam .  (14)

	.  reduce 14


state 22
	funcao : main .  (15)

	.  reduce 15


state 23
	funcaoComParam : typeRet . IDENT '(' listaParam ')' listaDeclaracoes '{' listacmd '}'  (16)
	funcaoSemParam : typeRet . IDENT '(' ')' listaDeclaracoes '{' listacmd '}'  (20)

	IDENT  shift 28
	.  error


state 24
	TArray : '[' . NUM ']' TArray  (23)

	NUM  shift 29
	.  error


state 25
	declaracao : type $$2 TArray . Lid ';'  (8)

	IDENT  shift 30
	.  error

	Lid  goto 31
	id  goto 32


state 26
	declaracaoStruct : STRUCT IDENT '{' listaCampos . '}' ';'  (10)
	listaCampos : listaCampos . declaracao  (11)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	STRUCT  shift 8
	'}'  shift 33
	.  error

	type  goto 10
	declaracao  goto 34
	declaracaoStruct  goto 12


state 27
	main : VOID MAIN . '(' ')' listaDeclaracoes bloco  (32)

	'('  shift 35
	.  error


state 28
	funcaoComParam : typeRet IDENT . '(' listaParam ')' listaDeclaracoes '{' listacmd '}'  (16)
	funcaoSemParam : typeRet IDENT . '(' ')' listaDeclaracoes '{' listacmd '}'  (20)

	'('  shift 36
	.  error


state 29
	TArray : '[' NUM . ']' TArray  (23)

	']'  shift 37
	.  error


state 30
	id : IDENT .  (27)

	.  reduce 27


state 31
	declaracao : type $$2 TArray Lid . ';'  (8)
	Lid : Lid . ',' id  (25)

	';'  shift 38
	','  shift 39
	.  error


state 32
	Lid : id .  (26)

	.  reduce 26


state 33
	declaracaoStruct : STRUCT IDENT '{' listaCampos '}' . ';'  (10)

	';'  shift 40
	.  error


state 34
	listaCampos : listaCampos declaracao .  (11)

	.  reduce 11


state 35
	main : VOID MAIN '(' . ')' listaDeclaracoes bloco  (32)

	')'  shift 41
	.  error


state 36
	funcaoComParam : typeRet IDENT '(' . listaParam ')' listaDeclaracoes '{' listacmd '}'  (16)
	funcaoSemParam : typeRet IDENT '(' . ')' listaDeclaracoes '{' listacmd '}'  (20)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	')'  shift 42
	.  error

	type  goto 43
	listaParam  goto 44
	param  goto 45


state 37
	TArray : '[' NUM ']' . TArray  (23)
	TArray : .  (24)

	'['  shift 24
	IDENT  reduce 24

	TArray  goto 46


state 38
	declaracao : type $$2 TArray Lid ';' .  (8)

	.  reduce 8


state 39
	Lid : Lid ',' . id  (25)

	IDENT  shift 30
	.  error

	id  goto 47


state 40
	declaracaoStruct : STRUCT IDENT '{' listaCampos '}' ';' .  (10)

	.  reduce 10


state 41
	main : VOID MAIN '(' ')' . listaDeclaracoes bloco  (32)
	listaDeclaracoes : .  (4)

	.  reduce 4

	listaDeclaracoes  goto 48


state 42
	funcaoSemParam : typeRet IDENT '(' ')' . listaDeclaracoes '{' listacmd '}'  (20)
	listaDeclaracoes : .  (4)

	.  reduce 4

	listaDeclaracoes  goto 49


state 43
	param : type . IDENT  (19)

	IDENT  shift 50
	.  error


state 44
	funcaoComParam : typeRet IDENT '(' listaParam . ')' listaDeclaracoes '{' listacmd '}'  (16)

	')'  shift 51
	.  error


state 45
	listaParam : param . ';' listaParam  (17)
	listaParam : param .  (18)

	';'  shift 52
	')'  reduce 18


state 46
	TArray : '[' NUM ']' TArray .  (23)

	.  reduce 23


state 47
	Lid : Lid ',' id .  (25)

	.  reduce 25


state 48
	listaDeclaracoes : listaDeclaracoes . declaracao  (3)
	main : VOID MAIN '(' ')' listaDeclaracoes . bloco  (32)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	STRUCT  shift 8
	'{'  shift 53
	.  error

	type  goto 10
	declaracao  goto 11
	declaracaoStruct  goto 12
	bloco  goto 54


state 49
	listaDeclaracoes : listaDeclaracoes . declaracao  (3)
	funcaoSemParam : typeRet IDENT '(' ')' listaDeclaracoes . '{' listacmd '}'  (20)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	STRUCT  shift 8
	'{'  shift 55
	.  error

	type  goto 10
	declaracao  goto 11
	declaracaoStruct  goto 12


state 50
	param : type IDENT .  (19)

	.  reduce 19


state 51
	funcaoComParam : typeRet IDENT '(' listaParam ')' . listaDeclaracoes '{' listacmd '}'  (16)
	listaDeclaracoes : .  (4)

	.  reduce 4

	listaDeclaracoes  goto 56


state 52
	listaParam : param ';' . listaParam  (17)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	.  error

	type  goto 43
	listaParam  goto 57
	param  goto 45


state 53
	bloco : '{' . listacmd '}'  (33)
	listacmd : .  (35)

	.  reduce 35

	listacmd  goto 58


state 54
	main : VOID MAIN '(' ')' listaDeclaracoes bloco .  (32)

	.  reduce 32


state 55
	funcaoSemParam : typeRet IDENT '(' ')' listaDeclaracoes '{' . listacmd '}'  (20)
	listacmd : .  (35)

	.  reduce 35

	listacmd  goto 59


state 56
	listaDeclaracoes : listaDeclaracoes . declaracao  (3)
	funcaoComParam : typeRet IDENT '(' listaParam ')' listaDeclaracoes . '{' listacmd '}'  (16)

	IDENT  shift 4
	INT  shift 5
	DOUBLE  shift 6
	BOOL  shift 7
	STRUCT  shift 8
	'{'  shift 60
	.  error

	type  goto 10
	declaracao  goto 11
	declaracaoStruct  goto 12


state 57
	listaParam : param ';' listaParam .  (17)

	.  reduce 17


state 58
	bloco : '{' listacmd . '}'  (33)
	listacmd : listacmd . cmd  (34)

	IDENT  shift 61
	IF  shift 62
	'}'  shift 63
	.  error

	cmd  goto 64


state 59
	funcaoSemParam : typeRet IDENT '(' ')' listaDeclaracoes '{' listacmd . '}'  (20)
	listacmd : listacmd . cmd  (34)

	IDENT  shift 61
	IF  shift 62
	'}'  shift 65
	.  error

	cmd  goto 64


state 60
	funcaoComParam : typeRet IDENT '(' listaParam ')' listaDeclaracoes '{' . listacmd '}'  (16)
	listacmd : .  (35)

	.  reduce 35

	listacmd  goto 66


state 61
	cmd : IDENT . '=' exp ';'  (36)
	cmd : IDENT . '(' ')' ';'  (39)
	cmd : IDENT . '(' listaExp ')' ';'  (40)

	'('  shift 67
	'='  shift 68
	.  error


state 62
	cmd : IF . '(' exp ')' $$3 cmd  (38)

	'('  shift 69
	.  error


state 63
	bloco : '{' listacmd '}' .  (33)

	.  reduce 33


state 64
	listacmd : listacmd cmd .  (34)

	.  reduce 34


state 65
	funcaoSemParam : typeRet IDENT '(' ')' listaDeclaracoes '{' listacmd '}' .  (20)

	.  reduce 20


state 66
	funcaoComParam : typeRet IDENT '(' listaParam ')' listaDeclaracoes '{' listacmd . '}'  (16)
	listacmd : listacmd . cmd  (34)

	IDENT  shift 61
	IF  shift 62
	'}'  shift 70
	.  error

	cmd  goto 64


state 67
	cmd : IDENT '(' . ')' ';'  (39)
	cmd : IDENT '(' . listaExp ')' ';'  (40)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	')'  shift 74
	.  error

	exp  goto 75
	listaExp  goto 76


state 68
	cmd : IDENT '=' . exp ';'  (36)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 77


state 69
	cmd : IF '(' . exp ')' $$3 cmd  (38)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 78


state 70
	funcaoComParam : typeRet IDENT '(' listaParam ')' listaDeclaracoes '{' listacmd '}' .  (16)

	.  reduce 16


state 71
	exp : IDENT .  (47)
	exp : IDENT . '(' ')'  (48)
	exp : IDENT . '(' listaExp ')'  (49)

	'('  shift 79
	AND  reduce 47
	'>'  reduce 47
	'+'  reduce 47
	'*'  reduce 47
	'['  reduce 47
	'.'  reduce 47
	';'  reduce 47
	')'  reduce 47
	']'  reduce 47
	','  reduce 47


state 72
	exp : NUM .  (45)

	.  reduce 45


state 73
	exp : '(' . exp ')'  (46)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 80


state 74
	cmd : IDENT '(' ')' . ';'  (39)

	';'  shift 81
	.  error


state 75
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)
	listaExp : exp .  (53)

	AND  shift 82
	'>'  shift 83
	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	')'  reduce 53
	','  reduce 53


state 76
	cmd : IDENT '(' listaExp . ')' ';'  (40)
	listaExp : listaExp . ',' exp  (52)

	')'  shift 88
	','  shift 89
	.  error


state 77
	cmd : IDENT '=' exp . ';'  (36)
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)

	AND  shift 82
	'>'  shift 83
	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	';'  shift 90
	.  error


state 78
	cmd : IF '(' exp . ')' $$3 cmd  (38)
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)

	AND  shift 82
	'>'  shift 83
	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	')'  shift 91
	.  error


state 79
	exp : IDENT '(' . ')'  (48)
	exp : IDENT '(' . listaExp ')'  (49)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	')'  shift 92
	.  error

	exp  goto 75
	listaExp  goto 93


state 80
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : '(' exp . ')'  (46)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)

	AND  shift 82
	'>'  shift 83
	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	')'  shift 94
	.  error


state 81
	cmd : IDENT '(' ')' ';' .  (39)

	.  reduce 39


state 82
	exp : exp AND . exp  (44)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 95


state 83
	exp : exp '>' . exp  (43)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 96


state 84
	exp : exp '+' . exp  (41)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 97


state 85
	exp : exp '*' . exp  (42)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 98


state 86
	exp : exp '[' . exp ']'  (51)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 99


state 87
	exp : exp '.' . exp  (50)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 100


state 88
	cmd : IDENT '(' listaExp ')' . ';'  (40)

	';'  shift 101
	.  error


state 89
	listaExp : listaExp ',' . exp  (52)

	IDENT  shift 71
	NUM  shift 72
	'('  shift 73
	.  error

	exp  goto 102


state 90
	cmd : IDENT '=' exp ';' .  (36)

	.  reduce 36


state 91
	cmd : IF '(' exp ')' . $$3 cmd  (38)
	$$3 : .  (37)

	.  reduce 37

	$$3  goto 103


state 92
	exp : IDENT '(' ')' .  (48)

	.  reduce 48


state 93
	exp : IDENT '(' listaExp . ')'  (49)
	listaExp : listaExp . ',' exp  (52)

	')'  shift 104
	','  shift 89
	.  error


state 94
	exp : '(' exp ')' .  (46)

	.  reduce 46


state 95
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp AND exp .  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)

	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	AND  reduce 44
	'>'  reduce 44
	';'  reduce 44
	')'  reduce 44
	']'  reduce 44
	','  reduce 44


state 96
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp '>' exp .  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)

	AND  shift 82
	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	';'  reduce 43
	')'  reduce 43
	']'  reduce 43
	','  reduce 43


state 97
	exp : exp . '+' exp  (41)
	exp : exp '+' exp .  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)

	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	AND  reduce 41
	'>'  reduce 41
	'+'  reduce 41
	';'  reduce 41
	')'  reduce 41
	']'  reduce 41
	','  reduce 41


state 98
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp '*' exp .  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)

	'['  shift 86
	'.'  shift 87
	AND  reduce 42
	'>'  reduce 42
	'+'  reduce 42
	'*'  reduce 42
	';'  reduce 42
	')'  reduce 42
	']'  reduce 42
	','  reduce 42


state 99
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)
	exp : exp '[' exp . ']'  (51)

	AND  shift 82
	'>'  shift 83
	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	']'  shift 105
	.  error


state 100
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp '.' exp .  (50)
	exp : exp . '[' exp ']'  (51)

	.  reduce 50


state 101
	cmd : IDENT '(' listaExp ')' ';' .  (40)

	.  reduce 40


state 102
	exp : exp . '+' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . '.' exp  (50)
	exp : exp . '[' exp ']'  (51)
	listaExp : listaExp ',' exp .  (52)

	AND  shift 82
	'>'  shift 83
	'+'  shift 84
	'*'  shift 85
	'['  shift 86
	'.'  shift 87
	')'  reduce 52
	','  reduce 52


state 103
	cmd : IF '(' exp ')' $$3 . cmd  (38)

	IDENT  shift 61
	IF  shift 62
	.  error

	cmd  goto 106


state 104
	exp : IDENT '(' listaExp ')' .  (49)

	.  reduce 49


state 105
	exp : exp '[' exp ']' .  (51)

	.  reduce 51


state 106
	cmd : IF '(' exp ')' $$3 cmd .  (38)

	.  reduce 38


28 terminals, 26 nonterminals
54 grammar rules, 107 states
